fixed text color in input component to black on mobile aswell

--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,15 @@ h2{
   border-radius: 2px;
   border: 2px solid black;
   height: 20px;
+  color: black;
+  
 }
+
+.join-input:focus{
+  color: black;
+
+}
+
 
 .randomize-button{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
